// Copyright 2025 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package confidential_federated_compute.program_executor_tee;

// BudgetState represents the budget maintained by the program executor
// containers for a given logical pipeline name.
message BudgetState {
  // The remaining number of times any program may be executed.
  uint32 num_runs_remaining = 1;

  // A strictly increasing counter to ensure that the state changes between
  // releases. Without this field, KMS would fail all but the first release
  // operation for a given program run since the num_runs_remaining field
  // is only updated on the very first release operation in a program.
  uint32 counter = 2;
}
